--- a/index.html
+++ b/index.html
@@ -2943,7 +2943,168 @@ else if (document.getElementById("customCoinName").value == "eddie") {
   document.getElementById("bTtitle1").textContent = "EddieCoin";
   tickerCode = "EDDIE";
 }
-
+else if (document.getElementById("customCoinName").value == "bidx") {
+  document.getElementById("coinjs_pub").value = "0x4b";
+  document.getElementById("coinjs_priv").value = "0xcb";
+  document.getElementById("coinjs_multisig").value = "0x89";
+  document.getElementById("coinLogo").src = "images/logo/bidx.png";
+  document.getElementById("bTtitle").textContent = "Bidx";
+  document.getElementById("bTtitle1").textContent = "Bidx";
+  tickerCode = "BIDX";
+}
+else if (document.getElementById("customCoinName").value == "corn") {
+  document.getElementById("coinjs_pub").value = "0x1c";
+  document.getElementById("coinjs_priv").value = "0x35";
+  document.getElementById("coinjs_multisig").value = "0x3c";
+  document.getElementById("coinLogo").src = "images/logo/corn.png";
+  document.getElementById("bTtitle").textContent = "Bitcorn";
+  document.getElementById("bTtitle1").textContent = "Bitcorn";
+  tickerCode = "CORN";
+}
+else if (document.getElementById("customCoinName").value == "bitg") {
+  document.getElementById("coinjs_pub").value = "0x26";
+  document.getElementById("coinjs_priv").value = "0x2e";
+  document.getElementById("coinjs_multisig").value = "0x6";
+  document.getElementById("coinLogo").src = "images/logo/bitg.png";
+  document.getElementById("bTtitle").textContent = "BitGreen";
+  document.getElementById("bTtitle1").textContent = "BitGreen";
+  tickerCode = "BITG";
+}
+else if (document.getElementById("customCoinName").value == "bnd") {
+  document.getElementById("coinjs_pub").value = "0x19";
+  document.getElementById("coinjs_priv").value = "0x2e";
+  document.getElementById("coinjs_multisig").value = "0x3f";
+  document.getElementById("coinLogo").src = "images/logo/bnd.png";
+  document.getElementById("bTtitle").textContent = "Blocknode";
+  document.getElementById("bTtitle1").textContent = "Blocknode";
+  tickerCode = "BND";
+}
+else if (document.getElementById("customCoinName").value == "cheese") {
+  document.getElementById("coinjs_pub").value = "0x1c";
+  document.getElementById("coinjs_priv").value = "0x99";
+  document.getElementById("coinjs_multisig").value = "0x55";
+  document.getElementById("coinLogo").src = "images/logo/cheese.png";
+  document.getElementById("bTtitle").textContent = "Cheesecoin";
+  document.getElementById("bTtitle1").textContent = "Cheesecoin";
+  tickerCode = "CHEESE";
+}
+else if (document.getElementById("customCoinName").value == "cir") {
+  document.getElementById("coinjs_pub").value = "0x1c";
+  document.getElementById("coinjs_priv").value = "0x9c";
+  document.getElementById("coinjs_multisig").value = "0x57";
+  document.getElementById("coinLogo").src = "images/logo/cir.png";
+  document.getElementById("bTtitle").textContent = "Ciredo";
+  document.getElementById("bTtitle1").textContent = "Ciredo";
+  tickerCode = "CIR";
+}
+else if (document.getElementById("customCoinName").value == "crave") {
+  document.getElementById("coinjs_pub").value = "0x46";
+  document.getElementById("coinjs_priv").value = "0x99";
+  document.getElementById("coinjs_multisig").value = "0x55";
+  document.getElementById("coinLogo").src = "images/logo/crave.png";
+  document.getElementById("bTtitle").textContent = "Crave ";
+  document.getElementById("bTtitle1").textContent = "Crave";
+  tickerCode = "CRAVE";
+}
+else if (document.getElementById("customCoinName").value == "cdzc") {
+  document.getElementById("coinjs_pub").value = "0x1e";
+  document.getElementById("coinjs_priv").value = "0xc7";
+  document.getElementById("coinjs_multisig").value = "0x3f";
+  document.getElementById("coinLogo").src = "images/logo/cdzc.png";
+  document.getElementById("bTtitle").textContent = "CryptoDezireCash";
+  document.getElementById("bTtitle1").textContent = "CryptoDezireCash";
+  tickerCode = "CDZC";
+}
+else if (document.getElementById("customCoinName").value == "cj") {
+  document.getElementById("coinjs_pub").value = "0x1c";
+  document.getElementById("coinjs_priv").value = "0x9c";
+  document.getElementById("coinjs_multisig").value = "0x55";
+  document.getElementById("coinLogo").src = "images/logo/cj.png";
+  document.getElementById("bTtitle").textContent = "Cryptojacks";
+  document.getElementById("bTtitle1").textContent = "Cryptojacks";
+  tickerCode = "CJ";
+}
+else if (document.getElementById("customCoinName").value == "dvt") {
+  document.getElementById("coinjs_pub").value = "0x";
+  document.getElementById("coinjs_priv").value = "0x";
+  document.getElementById("coinjs_multisig").value = "0x";
+  document.getElementById("coinLogo").src = "images/logo/dvt.png";
+  document.getElementById("bTtitle").textContent = "DeVault";
+  document.getElementById("bTtitle1").textContent = "DeVault";
+  tickerCode = "DVT";
+}
+else if (document.getElementById("customCoinName").value == "ext") {
+  document.getElementById("coinjs_pub").value = "0x21";
+  document.getElementById("coinjs_priv").value = "0x99";
+  document.getElementById("coinjs_multisig").value = "0x14";
+  document.getElementById("coinLogo").src = "images/logo/ext.png";
+  document.getElementById("bTtitle").textContent = "Exsolution";
+  document.getElementById("bTtitle1").textContent = "Exsolution";
+  tickerCode = "EXT";
+}
+else if (document.getElementById("customCoinName").value == "hwi") {
+  document.getElementById("coinjs_pub").value = "0x29";
+  document.getElementById("coinjs_priv").value = "0xd7";
+  document.getElementById("coinjs_multisig").value = "0x78";
+  document.getElementById("coinLogo").src = "images/logo/hwi.png";
+  document.getElementById("bTtitle").textContent = "Hawaii Coin";
+  document.getElementById("bTtitle1").textContent = "Hawaii Coin";
+  tickerCode = "HWI";
+}
+else if (document.getElementById("customCoinName").value == "pos") {
+  document.getElementById("coinjs_pub").value = "0x37";
+  document.getElementById("coinjs_priv").value = "0xb7";
+  document.getElementById("coinjs_multisig").value = "0x55";
+  document.getElementById("coinLogo").src = "images/logo/pos.png";
+  document.getElementById("bTtitle").textContent = "POS Coin";
+  document.getElementById("bTtitle1").textContent = "POS Coin";
+  tickerCode = "POS";
+}
+else if (document.getElementById("customCoinName").value == "scriv") {
+  document.getElementById("coinjs_pub").value = "0x7d";
+  document.getElementById("coinjs_priv").value = "0xcc";
+  document.getElementById("coinjs_multisig").value = "0x10";
+  document.getElementById("coinLogo").src = "images/logo/scriv.png";
+  document.getElementById("bTtitle").textContent = "Scriv";
+  document.getElementById("bTtitle1").textContent = "Scriv";
+  tickerCode = "SCRIV";
+}
+else if (document.getElementById("customCoinName").value == "scc") {
+  document.getElementById("coinjs_pub").value = "0x7d";
+  document.getElementById("coinjs_priv").value = "0xfd";
+  document.getElementById("coinjs_multisig").value = "0x75";
+  document.getElementById("coinLogo").src = "images/logo/scc.png";
+  document.getElementById("bTtitle").textContent = "StakeCubeCoin";
+  document.getElementById("bTtitle1").textContent = "StakeCubeCoin";
+  tickerCode = "SCC";
+}
+else if (document.getElementById("customCoinName").value == "shmn") {
+  document.getElementById("coinjs_pub").value = "0x32";
+  document.getElementById("coinjs_priv").value = "0xd4";
+  document.getElementById("coinjs_multisig").value = "0xb";
+  document.getElementById("coinLogo").src = "images/logo/shmn.png";
+  document.getElementById("bTtitle").textContent = "StrongHands Masternode";
+  document.getElementById("bTtitle1").textContent = "StrongHands Masternode";
+  tickerCode = "SHMN";
+}
+else if (document.getElementById("customCoinName").value == "trbo") {
+  document.getElementById("coinjs_pub").value = "0x41";
+  document.getElementById("coinjs_priv").value = "0x37";
+  document.getElementById("coinjs_multisig").value = "0x3";
+  document.getElementById("coinLogo").src = "images/logo/trbo.png";
+  document.getElementById("bTtitle").textContent = "TRBO";
+  document.getElementById("bTtitle1").textContent = "TRBO";
+  tickerCode = "TRBO";
+}
+else if (document.getElementById("customCoinName").value == "varius") {
+  document.getElementById("coinjs_pub").value = "0x46";
+  document.getElementById("coinjs_priv").value = "0xc6";
+  document.getElementById("coinjs_multisig").value = "0x55";
+  document.getElementById("coinLogo").src = "images/logo/varius.png";
+  document.getElementById("bTtitle").textContent = "Varius";
+  document.getElementById("bTtitle1").textContent = "Varius";
+  tickerCode = "VARIUS";
+}
 	  else {
 				document.getElementById("xfeeTicker").textContent = document.getElementById("customCoinName").value
 				console.log(document.getElementById("customCoinName").value);
@@ -4269,7 +4430,7 @@ jQuery(document).ready(function($) {
 
 					<div class="tab-pane tab-content" id="about">
 						<h2>About <small>open source Pandacoin wallet</small></h2>
-						<p>Version 2.0.12</p>
+						<p>Version 2.0.14</p>
 						<p>Compatible with Pandacoin</p>
                         <p><a href="https://github.com/DigitalPandacoin/coinbin">https://github.com/DigitalPandacoin/coinbin</a></p>
 						<p>Forked from <a href="https://coinb.in">https://coinb.in"</a></p>
@@ -4350,7 +4511,6 @@ jQuery(document).ready(function($) {
 <div style="float: left; margin-right: 10px;"><input type="radio" name="setting" value="bro" rel="0x;0x;0x;0x;0x;cryptoid.custom;cryptoid.custom"><br><img  src="https://cryptodepot.org/coinbin/images/logo/bro.png" style="height:45px"><br>bro*</div>
 <div style="float: left; margin-right: 10px;"><input type="radio" name="setting" value="bsd" rel="0x;0x;0x;0x;0x;cryptoid.custom;cryptoid.custom"><br><img  src="https://cryptodepot.org/coinbin/images/logo/bsd.png" style="height:45px"><br>bsd*</div>
 <div style="float: left; margin-right: 10px;"><input type="radio" name="setting" value="bsx" rel="0x;0x;0x;0x;0x;cryptoid.custom;cryptoid.custom"><br><img  src="https://cryptodepot.org/coinbin/images/logo/bsx.png" style="height:45px"><br>bsx*</div>
-<div style="float: left; margin-right: 10px;"><input type="radio" name="setting" value="btb" rel="0x;0x;0x;0x;0x;cryptoid.custom;cryptoid.custom"><br><img  src="https://cryptodepot.org/coinbin/images/logo/btb.png" style="height:45px"><br>btb</div>
 <div style="float: left; margin-right: 10px;"><input type="radio" name="setting" value="btcd" rel="0x;0x;0x;0x;0x;cryptoid.custom;cryptoid.custom"><br><img  src="https://cryptodepot.org/coinbin/images/logo/btcd.png" style="height:45px"><br>btcd</div>
 <div style="float: left; margin-right: 10px;"><input type="radio" name="setting" value="btc" rel="0x;0x;0x;0x;0x;cryptoid.custom;cryptoid.custom"><br><img  src="https://cryptodepot.org/coinbin/images/logo/btc.png" style="height:45px"><br>btc</div>
 <div style="float: left; margin-right: 10px;"><input type="radio" name="setting" value="btcs" rel="0x;0x;0x;0x;0x;cryptoid.custom;cryptoid.custom"><br><img  src="https://cryptodepot.org/coinbin/images/logo/btcs.png" style="height:45px"><br>btcs</div>
@@ -4737,10 +4897,10 @@ jQuery(document).ready(function($) {
 <option value="xhi">HiCoin (XHI)</option><option value="nka">IncaKoin (NKA)</option><option value="net">Netcoin (NET)</option><option value="jmc">Junson Ming Chan Coin (JMC)</option><option value="pac">Paccoin (PAC)</option><option value="hpc">HappyCoin (HPC)</option><option value="bost">Boostcoin (BOST)</option>
 <option value="rbt">Rimbit (RBT)</option><option value="fair">Faircoin (FAIR)</option><option value="dem">eMark (DEM)</option><option value="boat">Boat (BOAT)</option><option value="alex">Alexandrite (ALEX)</option><option value="nlc2">NoLimitCoin (NLC2)</option><option value="flt">Fluttercoin (FLT)</option>
 <option value="asafe2">Allsafe (ASAFE2)</option><option value="avn">Avantage (AVN)</option><option value="bcf">Bitcoin Fast (BCF)</option><option value="bdc">BollywoodCoin (BDC)</option><option value="bell">Bellcoin (BELL)</option>
-<option value="bfl">Bitflate (BFL)</option><option value="bis">Bismuth (BIS)</option><option value="bnb">Binance Coin (BNB)</option><option value="brix">BrixCoin (BRIX)</option><option value="btb">BitBall (BTB)</option>
-<option value="bynd">Beyondcoin (BYND)</option><option value="dogecoin">Dogecoin (DOGE)*</option><option value="byt">Bytecoin (BCN)</option><option value="cdzc">CryptoDezireCash (CDZC)</option><option value="cheese">Cheesecoin (CHEESE)</option><option value="cir">Ciredo (CIR)</option><option value="cj">Cryptojacks (CJ)</option><option value="crave">Crave (CRAVE)</option>
-<option value="bitg">Bitgreen (BITG)*</option><option value="scc">StakeCubeCoin (SCC)*</option><option value="corn">Bitcorn (CORN)*</option><option value="dc">Ducat Coin (DC)*</option><option value="ext">Exsolution (EXT)*</option><option value="eddie">EddieCoin (EDDIE)*</option><option value="bidx">BIDX (BIDX)*</option>
-<option value="varius">VARIUS (VARIUS)*</option><option value="hwi">Hawaii Coin (HWI)*</option><option value="bnd">Blocknode (BND)*</option>
+<option value="bfl">Bitflate (BFL)</option><option value="bis">Bismuth (BIS)</option><option value="bnb">Binance Coin (BNB)</option><option value="brix">BrixCoin (BRIX)</option>
+<option value="bynd">Beyondcoin (BYND)</option><option value="dogecoin">Dogecoin (DOGE)*</option><option value="byt">Bytecoin (BCN)</option><option value="cdzc">CryptoDezireCash (CDZC)</option><option value="cheese">Cheesecoin (CHEESE)</option><option value="cir">Ciredo (CIR)</option><option value="cj">Cryptojacks (CJ)</option>
+<option value="crave">Crave (CRAVE)</option><option value="bitg">Bitgreen (BITG)*</option><option value="scc">StakeCubeCoin (SCC)*</option><option value="corn">Bitcorn (CORN)*</option><option value="dc">Ducat Coin (DC)*</option><option value="ext">Exsolution (EXT)*</option><option value="eddie">EddieCoin (EDDIE)*</option>
+<option value="bidx">BIDX (BIDX)*</option><option value="varius">VARIUS (VARIUS)*</option><option value="hwi">Hawaii Coin (HWI)*</option><option value="bnd">Blocknode (BND)*</option>
 <option value="pos">POS COIN (POS)*</option><options value="lpc">LightPayCoin (LPC)*</option><option value="trbo">TRBO (TRBO)*</option><option value="dvt">DeVault (DVT)*</option>
 <option value="apr">APR Coin (APR)*</option><option value="scriv">SCRIV (SCRIV)*</option><option value="shmn">StrongHands Masternode (SHMN)*</option>
 									</select>
@@ -4828,7 +4988,7 @@ jQuery(document).ready(function($) {
 
 		<div id="footer">
 			<div class="container text-right">
-	        		<p class="text-muted">Version  2.0.12</p>
+	        		<p class="text-muted">Version  2.0.14</p>
 			</div>
 		</div>
 
