--- a/index.html
+++ b/index.html
@@ -4423,7 +4423,7 @@ jQuery(document).ready(function($) {
 
 					<div class="tab-pane tab-content" id="about">
 						<h2>About <small>open source Pandacoin wallet</small></h2>
-						<p>Version 2.0.14</p>
+						<p>Version 2.0.15</p>
 						<p>Compatible with Pandacoin</p>
                         <p><a href="https://github.com/DigitalPandacoin/coinbin">https://github.com/DigitalPandacoin/coinbin</a></p>
 						<p>Forked from <a href="https://coinb.in">https://coinb.in"</a></p>
@@ -4454,7 +4454,7 @@ jQuery(document).ready(function($) {
 						</div>
 					</div>
 					<div class="tab-pane tab-content" id="allcoins">
-						<form id="allcoinsFormIDHere">
+						<form id="allcoinsFormIDHere"><center>
 						<div class="tab-content" style="align-content: auto;">
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="1337"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/1337.png" style="height:45px"><br><center>1337</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="1mt"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/1mt.png" style="height:45px"><br><center>1mt</center></div>
@@ -4468,7 +4468,7 @@ jQuery(document).ready(function($) {
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="agnt"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/agnt.png" style="height:45px"><br><center>agnt</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="aias"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/aias.png" style="height:45px"><br><center>aias</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="airx"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/airx.jpg" style="height:45px"><br><center>airx</center></div>
-							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="alex"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/alex.png" style="height:45px"><br><center>alex</center></div>
+							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="alex" rel="0x00;0x80;0x05;0x488b21e;0x488ade4;coinexplorer_custom;coinexplorer_custom"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/alex.png" style="height:45px"><br><center>alex</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="allsafe2"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/allsafe2.webp" style="height:45px"><br><center>allsafe2</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="allsafe"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/allsafe.webp" style="height:45px"><br><center>allsafe</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="apr"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/apr.png" style="height:45px"><br><center>apr</center></div>
@@ -4813,7 +4813,7 @@ jQuery(document).ready(function($) {
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="zoom"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/zoom.png" style="height:45px"><br><center>zoom</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="zrc"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/zrc.png" style="height:45px"><br><center>zrc</center></div>
 							<div style="clear: both"><input type="submit" id="allcoinsSubmitButtonIDHere"></form></div>
-						</div>
+						</div></center>
 					</div>
 					<div class="tab-pane tab-content" id="settings">
 						<h2>Settings <small> making coinb.in even better!</small></h2>
@@ -4951,8 +4951,8 @@ jQuery(document).ready(function($) {
 									<option value="chain.so_litecoin"> Chain.so (Litecoin)</option>
 									<option value="cryptoid.info_carboncoin"> Cryptoid.info (Carboncoin)</option>
 									<option value="shadowcash.host"> ShadowCash</option>
-									<option value="cryptoid.custom">Chainz Cryptoid</option>
-									<option value="coinexplorer.custom">Coin Explorer</option>
+									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
+									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
 							</div>
 						</div>
@@ -4977,8 +4977,8 @@ jQuery(document).ready(function($) {
 									<option value="chain.so_litecoin"> Chain.so (Litecoin)</option>
 									<option value="cryptoid.info_carboncoin"> Cryptoid.info (Carboncoin)</option>
 									<option value="shadowcash.host"> ShadowCash</option>
-									<option value="cryptoid.custom">Chainz Cryptoid</option>
-									<option value="coinexplorer.custom">Coin Explorer</option>
+									<option value="cryptoid.custom">Chainz Cryptoid (Custom)</option>
+									<option value="coinexplorer_custom">Coin Explorer (Custom)</option>
 								</select>
 							</div>
 						</div>
@@ -5002,7 +5002,7 @@ jQuery(document).ready(function($) {
 
 		<div id="footer">
 			<div class="container text-right">
-	        		<p class="text-muted">Version  2.0.14</p>
+	        		<p class="text-muted">Version  2.0.15</p>
 			</div>
 		</div>
 
