--- a/index.html
+++ b/index.html
@@ -2909,7 +2909,7 @@ else if (document.getElementById("customCoinName").value == "byt") {
 	document.getElementById("bTtitle1").textContent = "Bytecoin";
 	tickerCode = "BYT";
 }
-else if (document.getElementById("customCoinName").value == "dogecoin") {
+else if (document.getElementById("customCoinName").value == "doge") {
 	document.getElementById("coinjs_pub").value = "0x1e";
 	document.getElementById("coinjs_priv").value = "0x9e";
 	document.getElementById("coinjs_multisig").value = "0x16";
@@ -4483,11 +4483,9 @@ jQuery(document).ready(function($) {
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="bay"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/bay.png" style="height:45px"><br><center>bay</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="bbp"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/bbp.png" style="height:45px"><br><center>bbp</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="bbtc"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/bbtc.png" style="height:45px"><br><center>bbtc</center></div>
-							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="bcca"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/bcca.png" style="height:45px"><br><center>bcca</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="bcc"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/bcc.png" style="height:45px"><br><center>bcc</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="bccx"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/bccx.png" style="height:45px"><br><center>bccx</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="bcf"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/bcf.png" style="height:45px"><br><center>bcf</center></div>
-							<!--- <div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="bcn"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/bcn.png" style="height:45px"><br><center>bcn</center></div> --->
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="bcz"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/bcz.png" style="height:45px"><br><center>bcz</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="bdc"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/bdc.png" style="height:45px"><br><center>bdc</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="bean"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/bean.png" style="height:45px"><br><center>bean</center></div>
@@ -4562,7 +4560,7 @@ jQuery(document).ready(function($) {
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="divi"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/divi.png" style="height:45px"><br><center>divi</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="dmb"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/dmb.png" style="height:45px"><br><center>dmb</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="dmd"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/dmd.png" style="height:45px"><br><center>dmd</center></div>
-							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="dogecoin"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/dogecoin.png" style="height:45px"><br><center>dogecoin</center></div>
+							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="doge"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/dogecoin.png" style="height:45px"><br><center>dogecoin</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="donu"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/donu.png" style="height:45px"><br><center>donu</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="dope"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/dope.png" style="height:45px"><br><center>dope</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="d"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/d.png" style="height:45px"><br><center>d</center></div>
@@ -4723,6 +4721,7 @@ jQuery(document).ready(function($) {
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="rupx"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/rupx.png" style="height:45px"><br><center>rupx</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="safe"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/safe.png" style="height:45px"><br><center>safe</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="scifi"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/scifi.png" style="height:45px"><br><center>scifi</center></div>
+							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="scc"></center><br><img alt="scc" src="https://cryptodepot.org/coinbin/images/logo/scc.png" style="height:45px"><br><center>scc</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="scol"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/scol.png" style="height:45px"><br><center>scol</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="scribe"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/scribe.png" style="height:45px"><br><center>scribe</center></div>
 							<div style="float: left; margin-right: 10px;"><center><input type="radio" name="setting" value="scriv"></center><br><img alt="" src="https://cryptodepot.org/coinbin/images/logo/scriv.png" style="height:45px"><br><center>scriv</center></div>
@@ -4911,7 +4910,7 @@ jQuery(document).ready(function($) {
 <option value="rbt">Rimbit (RBT)</option><option value="fair">Faircoin (FAIR)</option><option value="dem">eMark (DEM)</option><option value="boat">Boat (BOAT)</option><option value="alex">Alexandrite (ALEX)</option><option value="nlc2">NoLimitCoin (NLC2)</option><option value="flt">Fluttercoin (FLT)</option>
 <option value="asafe2">Allsafe (ASAFE2)</option><option value="avn">Avantage (AVN)</option><option value="bcf">Bitcoin Fast (BCF)</option><option value="bdc">BollywoodCoin (BDC)</option><option value="bell">Bellcoin (BELL)</option>
 <option value="bfl">Bitflate (BFL)</option><option value="bis">Bismuth (BIS)</option><option value="bnb">Binance Coin (BNB)</option><option value="brix">BrixCoin (BRIX)</option>
-<option value="bynd">Beyondcoin (BYND)</option><option value="dogecoin">Dogecoin (DOGE)*</option><option value="byt">Bytecoin (BCN)</option><option value="cdzc">CryptoDezireCash (CDZC)</option><option value="cheese">Cheesecoin (CHEESE)</option><option value="cir">Ciredo (CIR)</option><option value="cj">Cryptojacks (CJ)</option>
+<option value="bynd">Beyondcoin (BYND)</option><option value="doge">Dogecoin (DOGE)*</option><option value="byt">Bytecoin (BCN)</option><option value="cdzc">CryptoDezireCash (CDZC)</option><option value="cheese">Cheesecoin (CHEESE)</option><option value="cir">Ciredo (CIR)</option><option value="cj">Cryptojacks (CJ)</option>
 <option value="crave">Crave (CRAVE)</option><option value="bitg">Bitgreen (BITG)*</option><option value="scc">StakeCubeCoin (SCC)*</option><option value="corn">Bitcorn (CORN)*</option><option value="dc">Ducat Coin (DC)*</option><option value="ext">Exsolution (EXT)*</option><option value="eddie">EddieCoin (EDDIE)*</option>
 <option value="bidx">BIDX (BIDX)*</option><option value="varius">VARIUS (VARIUS)*</option><option value="hwi">Hawaii Coin (HWI)*</option><option value="bnd">Blocknode (BND)*</option>
 <option value="pos">POS COIN (POS)*</option><options value="lpc">LightPayCoin (LPC)*</option><option value="trbo">TRBO (TRBO)*</option><option value="dvt">DeVault (DVT)*</option>
