--- a/index.html
+++ b/index.html
@@ -3131,7 +3131,7 @@ else if (document.getElementById("customCoinTicker").value == "bnb") {
 				document.getElementById("bTtitle").textContent = "Binance Coin";
 				document.getElementById("bTtitle1").textContent = "Binance Coin";
 				tickerCode = "BNB";
-				coingeckoCoinName = "biancecoin";
+				coingeckoCoinName = "binancecoin";
 }
 else if (document.getElementById("customCoinTicker").value == "bis") {
 				document.getElementById("coinjs_pub").value = "0x";
@@ -3261,7 +3261,7 @@ else if (document.getElementById("customCoinTicker").value == "bitg") {
   			document.getElementById("bTtitle").textContent = "BitGreen";
   			document.getElementById("bTtitle1").textContent = "BitGreen";
   			tickerCode = "BITG";
-				coingeckoCoinName = "bitgreen";
+				coingeckoCoinName = "bitcoin-green";
 }
 else if (document.getElementById("customCoinTicker").value == "bnd") {
   			document.getElementById("coinjs_pub").value = "0x19";
